# biber-manager

./: .pre-commit-config.yaml  CONTRIBUTING.rst  Makefile  README.md  changelog.md  pyproject.toml  requirements_dev.txt  setup.cfg  test.ipynb  tox.ini
.github/workflows/: autoupdate-pre-commit-config.yml  test.yml
biber_manager/: __init__.py  __main__.py  cli.py  download.py
docs/: Makefile  api_docs.rst  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test.bcf  test.blg  test_cli.py  test_download.py
