[metadata]
name = biber_manager
version = attr: biber_manager.__version__
description = Python package to install an manage biber versions as biblatex backend
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s-weigand/biber-manager
author = Sebastian Weigand
author_email = s.weigand.phy@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = biber latex biblatex
project_urls =
    Documentation=https://biber-manager.readthedocs.io
    Changelog=https://biber-manager.readthedocs.io/en/latest/changelog.html
    Source=https://github.com/s-weigand/biber-manager
    Tracker=https://github.com/s-weigand/biber-manager/issues

[options]
packages = find:
install_requires =
    appdirs>=1.4.4
    py7zr>=0.20.0
    requests-html>=0.10.0
    typer>=0.6.1
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
include =
    biber_manager
    biber_manager.*

[options.entry_points]
console_scripts =
    biber-manage=biber_manager.cli:app
    biber=biber_manager.cli:app

[darglint]
docstring_style = numpy

[pydocstyle]
convention = numpy

[aliases]
test = pytest

[rstcheck]
ignore_directives = autosummary
